--- a/src/app/views/instances/_list.xml.haml
+++ b/src/app/views/instances/_list.xml.haml
@@ -1,4 +1,4 @@
 !!! XML
-%instances
+%instances{ :href => instances_href }
   - @instances.each do |instance|
-    %instance{:id => instance.id, :href => api_instance_url(instance)}
+    =render '/instances/detail', :instance => instance, :shallow => shallow
