--- a/src/app/views/api/entrypoint/index.xml.haml
+++ b/src/app/views/api/entrypoint/index.xml.haml
@@ -5,6 +5,7 @@
   %deployables{:href => api_deployables_url}
   %deployments{:href => api_deployments_url}
   %images{:href => api_images_url}
+  %instances{:href => api_instances_url}
   %pools{:href => api_pools_url}
   %pool_families{:href => api_pool_families_url}
   %providers{:href => api_providers_url}
